[gd_scene load_steps=20 format=2]

[ext_resource path="res://GameController.gd" type="Script" id=1]
[ext_resource path="res://fonts/Louis George Cafe.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://music/Ze-Glitch-loop.mp3" type="AudioStream" id=3]
[ext_resource path="res://music/Ze-Glitch-intro.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/gong.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/fatalityHorn.wav" type="AudioStream" id=6]
[ext_resource path="res://music/flu-shot.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("QuitMessage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasModulate:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("IntroMusic:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FightMusic:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StoryModeMusic:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StoryModeMusic:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade fight music"
tracks/0/type = "value"
tracks/0/path = NodePath("FightMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -30.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IntroMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -5.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade to storymode"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("IntroMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -5.0, -30.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StoryModeMusic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StoryModeMusic:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -5.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fight music"
tracks/0/type = "value"
tracks/0/path = NodePath("FightMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IntroMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -30.0, -80.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "fight to conversation"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("FightMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -30.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StoryModeMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -5.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "intro music"
tracks/0/type = "value"
tracks/0/path = NodePath("FightMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -5.0, -30.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IntroMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -5.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "just fade fight music"
tracks/0/type = "value"
tracks/0/path = NodePath("FightMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -30.0, -80.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "just fight music"
tracks/0/type = "value"
tracks/0/path = NodePath("FightMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -10.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "quit"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuitMessage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_scene"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("QuitMessage:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("IntroMusic:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -5.0, -5.0, -30.0, -80.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "storymode to fight scene"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("StoryModeMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -5.0, -30.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FightMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -30.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FightMusic:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.0100663, 0.10085 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="GameController" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
"anims/fade fight music" = SubResource( 7 )
"anims/fade to storymode" = SubResource( 8 )
"anims/fight music" = SubResource( 5 )
"anims/fight to conversation" = SubResource( 10 )
"anims/intro music" = SubResource( 6 )
"anims/just fade fight music" = SubResource( 11 )
"anims/just fight music" = SubResource( 12 )
anims/quit = SubResource( 3 )
"anims/storymode to fight scene" = SubResource( 9 )

[node name="QuitMessage" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 213.0
margin_top = 264.0
margin_right = 813.0
margin_bottom = 321.0
theme = SubResource( 2 )
meta_underlined = false
text = "... why do all the good ones leave?"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true

[node name="StoryModeMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="FightMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
autoplay = true

[node name="Gong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FatalityHorn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
